--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,82 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* IntegralCF */
+@font-face {
+  font-family: "IntegralCF";
+  src: url("/src/fonts/Fontspring-DEMO-integralcf-bold.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IntegralCF";
+  src: url("/src/fonts/Fontspring-DEMO-integralcf-extrabold.otf")
+    format("opentype");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IntegralCF";
+  src: url("/src/fonts/Fontspring-DEMO-integralcf-heavy.otf") format("opentype");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IntegralCF";
+  src: url("/src/fonts/Fontspring-DEMO-integralcf-medium.otf")
+    format("opentype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IntegralCF";
+  src: url("/src/fonts/Fontspring-DEMO-integralcf-regular.otf")
+    format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* Satoshi */
+@font-face {
+  font-family: "Satoshi";
+  src: url("/src/fonts/Satoshi-Black.otf") format("opentype");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Satoshi";
+  src: url("/src/fonts/Satoshi-Bold.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Satoshi";
+  src: url("/src/fonts/Satoshi-Medium.otf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Satoshi";
+  src: url("/src/fonts/Satoshi-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Satoshi";
+  src: url("/src/fonts/Satoshi-Light.otf") format("opentype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+body {
+  @apply font-satoshi text-appBlack;
+}
